<resources>
    <string name="app_name">Lab7</string>
    <string name="leftArrow">backward</string>
    <string name="rightArrow">forward</string>
    <string name="refresh">refresh</string>
    <string name="leftChevron">previous</string>
    <string name="rightChevron">next</string>
    <string name="newPage">new_page</string>
    <string name="addressBar">Enter address</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
</resources>
