<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
      xmlns:app="http://schemas.android.com/apk/res-auto">

    <item android:id="@+id/action_refresh"
        android:icon="@drawable/ic_refresh_black_24dp"
        android:title="@string/refresh"
        app:showAsAction="always"/>

    <item android:id="@+id/action_prev"
        android:icon="@drawable/ic_chevron_left_black_24dp"
        android:title="@string/leftChevron"
        app:showAsAction="always"/>

    <item android:id="@+id/action_next"
        android:icon="@drawable/ic_chevron_right_black_24dp"
        android:title="@string/rightChevron"
        app:showAsAction="always"/>

    <item android:id="@+id/action_new"
        android:icon="@drawable/ic_queue_black_24dp"
        android:title="@string/newPage"
        app:showAsAction="always"/>

    <item android:id="@+id/action_back"
        android:icon="@drawable/ic_arrow_back_black_24dp"
        android:title="@string/leftArrow"
        app:showAsAction="ifRoom"/>

    <item android:id="@+id/action_forward"
        android:icon="@drawable/ic_arrow_forward_black_24dp"
        android:title="@string/rightArrow"
        app:showAsAction="ifRoom"/>



</menu>